// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`carousel > renders with arrows correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" class="" data-pohon="carousel-root">
  <div class="" data-pohon="carousel-viewport">
    <div class="" data-pohon="carousel-container" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <div class="" data-pohon="carousel-controls">
    <div class="" data-pohon="carousel-arrows"><button type="button" disabled="" aria-label="Prev" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" aria-label="Next" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`carousel > renders with as correctly 1`] = `
"<nav role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" class="" data-pohon="carousel-root">
  <div class="" data-pohon="carousel-viewport">
    <div class="" data-pohon="carousel-container" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <!--v-if-->
</nav>"
`;

exports[`carousel > renders with class correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" class="w-full max-w-xs" data-pohon="carousel-root">
  <div class="" data-pohon="carousel-viewport">
    <div class="" data-pohon="carousel-container" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`carousel > renders with dots correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" class="" data-pohon="carousel-root">
  <div class="" data-pohon="carousel-viewport">
    <div class="" data-pohon="carousel-container" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="tabpanel" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="tabpanel" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="tabpanel" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="tabpanel" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="tabpanel" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="tabpanel" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <div class="" data-pohon="carousel-controls">
    <!--v-if-->
    <div role="tablist" aria-label="Choose slide to display" class="" data-pohon="carousel-dots"></div>
  </div>
</div>"
`;

exports[`carousel > renders with items correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" class="" data-pohon="carousel-root">
  <div class="" data-pohon="carousel-viewport">
    <div class="" data-pohon="carousel-container" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`carousel > renders with next correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" class="" data-pohon="carousel-root">
  <div class="" data-pohon="carousel-viewport">
    <div class="" data-pohon="carousel-container" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <div class="" data-pohon="carousel-controls">
    <div class="" data-pohon="carousel-arrows"><button type="button" disabled="" aria-label="Prev" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" aria-label="Next" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`carousel > renders with nextIcon correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" class="" data-pohon="carousel-root">
  <div class="" data-pohon="carousel-viewport">
    <div class="" data-pohon="carousel-container" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <div class="" data-pohon="carousel-controls">
    <div class="" data-pohon="carousel-arrows"><button type="button" disabled="" aria-label="Prev" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" aria-label="Next" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`carousel > renders with orientation vertical correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="vertical" tabindex="0" class="" data-pohon="carousel-root">
  <div class="" data-pohon="carousel-viewport">
    <div class="" data-pohon="carousel-container" style="transform: translate3d(0px,NaNpx,0px);">
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`carousel > renders with prev correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" class="" data-pohon="carousel-root">
  <div class="" data-pohon="carousel-viewport">
    <div class="" data-pohon="carousel-container" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <div class="" data-pohon="carousel-controls">
    <div class="" data-pohon="carousel-arrows"><button type="button" disabled="" aria-label="Prev" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" aria-label="Next" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`carousel > renders with prevIcon correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" class="" data-pohon="carousel-root">
  <div class="" data-pohon="carousel-viewport">
    <div class="" data-pohon="carousel-container" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <div class="" data-pohon="carousel-controls">
    <div class="" data-pohon="carousel-arrows"><button type="button" disabled="" aria-label="Prev" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" aria-label="Next" data-pohon="button-base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="" data-pohon="button-leading-icon"></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`carousel > renders with ui correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" class="" data-pohon="carousel-root">
  <div class="h-[320px]" data-pohon="carousel-viewport">
    <div class="" data-pohon="carousel-container" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-pohon="carousel-item"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;
